samples/_failures_safe/1761447144_79a41a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8826879b.c: In function ‘main’:
./samples/SAFE/__tmp_8826879b.c:138:67: error: expected ‘)’ at end of input
  138 |     if (!read_size_t(&rows2) || !read_size_t(&cols2) || rows2 == 0
      |        ~                                                          ^
      |                                                                   )
./samples/SAFE/__tmp_8826879b.c:138:5: error: expected declaration or statement at end of input
  138 |     if (!read_size_t(&rows2) || !read_size_t(&cols2) || rows2 == 0
      |     ^~
